--- a/blog-category.html
+++ b/blog-category.html
@@ -51,7 +51,7 @@
 					<svg class="icon" width="8" height="8">
 						<use xlink:href="/images/sprite-icons/sprite/sprite-icons.svg#icon_telephone"></use>
 					</svg>
-					+7 (900)000 00 00
+					8 (495) 580-35-21
 				</a>
 			</li>
 			<li class="contacts__item only-mobile">
@@ -65,7 +65,7 @@
 		</ul>
 
 		<div class="header__logo-box">
-			<a href="/">
+			<a href="index.html">
 				<img src="images/logo/main-logo.svg" alt="Telegraph" width="68" class="header__logo">
 			</a>
 		</div>
