--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
 
             <ul class="nav__list">
                 <li class="nav__item">
-                    <a href="#" class="nav__link">
+                    <a href="./gallery.html" class="nav__link">
                         Фотогалерея
                     </a>
                 </li>
                 <li class="nav__item">
-                    <a href="blog-category.html" class="nav__link">
+                    <a href="./blog-category.html" class="nav__link">
                         Блог
                     </a>
                 </li>
                 <li class="nav__item">
-                    <a href="contacts.html" class="nav__link">
+                    <a href="./contacts.html" class="nav__link active">
                         Контакты
                     </a>
                 </li>
@@ -67,7 +67,7 @@
         </ul>
 
         <div class="header__logo-box">
-            <a href="">
+            <a href="index.html">
                 <img src="images/logo/main-logo.svg" alt="Telegraph" width="68" class="header__logo">
             </a>
         </div>
