--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
             <ul class="nav__list">
                <li class="nav__item">
-                    <a href="./gallery.html" class="nav__link active">
+                    <a href="./gallery.html" class="nav__link">
                         Фотогалерея
                     </a>
                 </li>
